--- a/Zork/Zork.csproj
+++ b/Zork/Zork.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
   <ItemGroup>
-    <None Update="Rooms.Json">
+    <None Update="Zork.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Rooms.txt">
